Closed
Bug 1623222
Opened 5 years ago
Closed 5 years ago
Status tip shows inconsistent result between find match and hover link
Categories
(Toolkit :: Find Toolbar, defect)
Toolkit
Find Toolbar
Tracking
()
RESOLVED
FIXED
mozilla76
Tracking | Status | |
---|---|---|
firefox76 | --- | fixed |
People
(Reporter: emk, Assigned: emk)
References
()
Details
Attachments
(1 file)
Steps to reproduce:
- Navigate to the URL.
- Open findbar and search for
あ
. - Hover the mouse cursor over the link.
Actual result:
Step 2 Will show the status tip with http://example.com?あ
.
Step 3 Will show the status tip with http://example.com?%82%A0
.
Expected result:
Both step 2 and 3 should show the consistent result.
Assignee | ||
Comment 1•5 years ago
|
||
Only 3 callers are using a non-UTF-8 charset as the first parameter.
- MediaDocument.cpp: This does not make sense because the "filename" part of
URLs will always be encoded with UTF-8. - nsContextMenu.js: This is wrong because "mailto:" URLs don't care about the
document charset. - Finder.jsm: This caused bug 1623222.
Updated•5 years ago
|
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Pushed by VYV03354@nifty.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/f99558b13579
Remove the charset parameter from nsITextToSubURI::UnEscapeURIForUI. r=hsivonen
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•5 years ago
|
QA Whiteboard: [qa-76b-p2]
You need to log in
before you can comment on or make changes to this bug.
Description
•